--- a/angular/Blog/angular.json
+++ b/angular/Blog/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Escritores": {
+    "Blog": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Escritores",
+            "outputPath": "dist/Blog",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -64,18 +64,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Escritores:build"
+            "browserTarget": "Blog:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Escritores:build:production"
+              "browserTarget": "Blog:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Escritores:build"
+            "browserTarget": "Blog:build"
           }
         },
         "test": {
@@ -112,16 +112,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Escritores:serve"
+            "devServerTarget": "Blog:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Escritores:serve:production"
+              "devServerTarget": "Blog:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "Escritores"
+  "defaultProject": "Blog"
 }
