--- a/node/appEscuelas/package.json
+++ b/node/appEscuelas/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prueba",
+  "name": "appescuelas",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -7,11 +7,12 @@
     "startdev": "nodemon ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.0",
-    "http-errors": "~1.6.2",
-    "morgan": "~1.9.0",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1",
+    "mysql": "^2.17.1",
     "pug": "2.0.0-beta11"
   }
 }
